api docs updates
